changed lines. refs #575